docs: Playwright + single-port frontend guidance for the web sandbox (#72)
* docs: add Playwright + single-port frontend guidance for the web sandbox

Co-authored-by: Claude <noreply@anthropic.com>